[tool.poetry]
name = "poputka"
version = "0.1.0"
description = ""
authors = ["Max Bazarov <bazaroffm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
fastapi = {extras = ["all"], version = "^0.95.1"}
alembic = "^1.10.4"
sqlalchemy = "^2.0.11"
asyncpg = "^0.27.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
python-jose = "^3.3.0"
pytest = "^7.4.0"
pyright = "^1.1.315"
celery = "^5.3.1"
flower = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
exclude = ["migrations"]


[tool.pyright]
include = ["app"]